Fix layout breakpoints

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3810,6 +3810,23 @@ form#user-login, form#user-pass {
   }
 }
 
+.page-categories {
+  #main-content .radix-burr-flipped {
+    @include breakpoint(944px) {
+      .col-md-8 {
+        width: 66.66666666666666%;
+        width: calc((100% / 3) * 2);
+        float: left;
+      }
+      .col-md-4 {
+        width: 33.33333333333333%;
+        width: calc(100% / 3);
+        float: left;
+      }
+    }
+  }
+}
+
 .pane-views-exp-categories-panel-pane-2 {
   .views-exposed-form {
     margin: 0;
